--- a/Classes/class-01/initial-template/pages/video-player/index.html
+++ b/Classes/class-01/initial-template/pages/video-player/index.html
@@ -16,7 +16,9 @@
 
 <body>
   <video id="video" src="/assets/video.mp4" controls></video>
-  </script>
+  
+
+  <script src="./src/index.js" type="module"></script>
 </body>
 
 </html>
