--- a/Classes/class-01/initial-template/pages/video-player/index.html
+++ b/Classes/class-01/initial-template/pages/video-player/index.html
@@ -15,8 +15,13 @@
 </head>
 
 <body>
+  <div class="button-container">
+    <div>
+      <button></button>
+    </div>
+  </div>
   <video id="video" src="/assets/video.mp4" controls></video>
-  
+
 
   <script src="./src/index.js" type="module"></script>
 </body>
