--- a/Classes/class-04/initial-template/pages/titles/index.html
+++ b/Classes/class-04/initial-template/pages/titles/index.html
@@ -12,7 +12,7 @@
 
 <body id="body">
   <canvas id="hands"></canvas>
-  
+
   <div class="content">
     <div class="header">
       <div class="brand">
@@ -158,7 +158,9 @@
     </div>
   </div>
 
-  <script src="./lib/sdk.js"></script>
+
+  <script type='text/javascript' src='https://cdn.jsdelivr.net/gh/TSedlar/pseudo-styler@1.0.8/pseudostyler.js'></script>
+  
   <script type="module" src="./src/index.js"></script>
 </body>
 
